@@ -1,23 +1,35 @@
 package com.unmsm.scorely.services;
 
-import com.unmsm.scorely.dto.AlumnoSeccionDTO;
-import com.unmsm.scorely.models.AlumnoSeccion;
-import com.unmsm.scorely.models.Persona;
-import com.unmsm.scorely.repository.AlumnoSeccionRepository;
+import java.math.BigDecimal;
+import java.math.RoundingMode;
+import java.util.List;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.math.BigDecimal;
-import java.util.List;
-import java.util.stream.Collectors;
+import com.unmsm.scorely.dto.AlumnoSeccionDTO;
+import com.unmsm.scorely.models.AlumnoSeccion;
+import com.unmsm.scorely.models.Entrega;
+import com.unmsm.scorely.models.Persona;
+import com.unmsm.scorely.repository.AlumnoSeccionRepository;
+import com.unmsm.scorely.repository.EntregaRepository;
 
 @Service
 public class AlumnoSeccionService {
 
-    private final AlumnoSeccionRepository alumnoSeccionRepository;
+    private static final Logger LOGGER = LoggerFactory.getLogger(AlumnoSeccionService.class);
 
-    public AlumnoSeccionService(AlumnoSeccionRepository alumnoSeccionRepository) {
+    private final AlumnoSeccionRepository alumnoSeccionRepository;
+    private final EntregaRepository entregaRepository;
+
+    public AlumnoSeccionService(
+            AlumnoSeccionRepository alumnoSeccionRepository,
+            EntregaRepository entregaRepository
+    ) {
         this.alumnoSeccionRepository = alumnoSeccionRepository;
+        this.entregaRepository = entregaRepository;
     }
 
     @Transactional(readOnly = true)
@@ -26,8 +38,8 @@ public class AlumnoSeccionService {
                 .findBySeccion_IdSeccion(idSeccion);
 
         return alumnosSecciones.stream()
-                .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .map(alumnoSeccion -> convertirADTO(alumnoSeccion, idSeccion))
+                .toList();
     }
 
     @Transactional(readOnly = true)
@@ -36,19 +48,18 @@ public class AlumnoSeccionService {
                 .findByAlumnoAndSeccion(idAlumno, idSeccion)
                 .orElseThrow(() -> new RuntimeException("Alumno no encontrado en la sección"));
 
-        return convertirADTO(alumnoSeccion);
+        return convertirADTO(alumnoSeccion, idSeccion);
     }
 
-    private AlumnoSeccionDTO convertirADTO(AlumnoSeccion alumnoSeccion) {
+    private AlumnoSeccionDTO convertirADTO(AlumnoSeccion alumnoSeccion, Integer idSeccion) {
         Persona persona = alumnoSeccion.getAlumno().getPersona();
-        
+
         String nombreCompleto = String.format("%s %s %s",
                 persona.getNombres(),
                 persona.getApellidoP(),
                 persona.getApellidoM()).trim();
 
-        // Por ahora el promedio es null, se calculará cuando implementes las notas
-        BigDecimal promedio = calcularPromedio(alumnoSeccion);
+        BigDecimal promedio = calcularPromedio(alumnoSeccion.getAlumno().getIdAlumno(), idSeccion);
 
         return AlumnoSeccionDTO.builder()
                 .idAlumno(alumnoSeccion.getAlumno().getIdAlumno())
@@ -65,9 +76,43 @@ public class AlumnoSeccionService {
                 .build();
     }
 
-    private BigDecimal calcularPromedio(AlumnoSeccion alumnoSeccion) {
-        // TODO: Implementar cálculo real de promedio basado en entregas
-        // Por ahora retorna null o un valor de ejemplo
-        return null;
+    /**
+     * Calcula el promedio de un alumno en una sección basándose en sus entregas.
+     * Solo considera la entrega más reciente de cada tarea.
+     */
+    private BigDecimal calcularPromedio(Integer idAlumno, Integer idSeccion) {
+        try {
+            List<Integer> tareasIds = entregaRepository.findTareasIdsBySeccion(idSeccion);
+
+            if (tareasIds.isEmpty()) {
+                return null;
+            }
+
+            BigDecimal sumaNotas = BigDecimal.ZERO;
+            int cantidadNotasValidas = 0;
+
+            for (Integer idTarea : tareasIds) {
+                List<Entrega> entregas = entregaRepository
+                        .findByTareaAndAlumnoOrderByFechaDesc(idTarea, idAlumno);
+
+                if (!entregas.isEmpty()) {
+                    Entrega ultimaEntrega = entregas.get(0);
+                    if (ultimaEntrega.getNota() != null) {
+                        sumaNotas = sumaNotas.add(ultimaEntrega.getNota());
+                        cantidadNotasValidas++;
+                    }
+                }
+            }
+
+            if (cantidadNotasValidas == 0) {
+                return null;
+            }
+
+            return sumaNotas.divide(BigDecimal.valueOf(cantidadNotasValidas), 2, RoundingMode.HALF_UP);
+
+        } catch (Exception e) {
+            LOGGER.error("Error al calcular promedio: {}", e.getMessage(), e);
+            return null;
+        }
     }
 }
