@@ -102,8 +102,7 @@ public class EntregaService {
     @Transactional(readOnly = true)
     public List<NotasDeTareas> obtenerTareasNotasAlumno(Integer idSeccion, Integer idAlumno) {
         // 1. Obtener todas las tareas de la sección
-        List<Tarea> tareas = tareaRepository.findBySeccionIdSeccion(idSeccion);
-
+        List<Tarea> tareas = tareaRepository.findBySeccionIdSeccionAndTipo(idSeccion, "Individual");
         // 2. Para cada tarea, buscar si existe una entrega del alumno
         return tareas.stream().map(tarea -> {
             // Buscar las entregas del alumno para esta tarea
@@ -111,7 +110,6 @@ public class EntregaService {
                     tarea.getIdTarea(),
                     idAlumno
             );
-
             // Si hay entregas, tomar la más reciente (primera en la lista)
             Entrega ultimaEntrega = entregas.isEmpty() ? null : entregas.get(0);
 
@@ -124,6 +122,6 @@ public class EntregaService {
                             ? ultimaEntrega.getNota().doubleValue()
                             : null
             );
-        }).collect(java.util.stream.Collectors.toList());
+        }).toList();
     }
 }
