@@ -3,6 +3,8 @@ package com.unmsm.scorely.services;
 import com.unmsm.scorely.dto.AlumnoDTO;
 import com.unmsm.scorely.dto.CrearGrupoRequest;
 import com.unmsm.scorely.dto.CrearGrupoResponse;
+import com.unmsm.scorely.dto.ObtenerCompanerosResponse;
+import com.unmsm.scorely.exception.GrupoServiceException;
 import com.unmsm.scorely.models.*;
 import com.unmsm.scorely.repository.AlumnoSeccionRepository;
 import com.unmsm.scorely.repository.GrupoRepository;
@@ -38,7 +40,7 @@ public class GrupoService {
 
         return alumnosSecciones.stream()
                 .map(this::convertToAlumnoDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -50,7 +52,7 @@ public class GrupoService {
 
         return alumnosSecciones.stream()
                 .map(this::convertToAlumnoDTOWithGrupo)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -64,14 +66,14 @@ public class GrupoService {
 
         // Validar que se seleccionaron al menos 2 alumnos
         if (request.getAlumnoIds() == null || request.getAlumnoIds().size() < 2) {
-            throw new RuntimeException("Debe seleccionar al menos 2 alumnos para crear un grupo");
+            throw new GrupoServiceException("Debe seleccionar al menos 2 alumnos para crear un grupo");
         }
 
 
         // Validar que ningún alumno ya tiene grupo asignado
         for (Integer idAlumno : request.getAlumnoIds()) {
             if (alumnoSeccionRepository.alumnoTieneGrupo(idAlumno, request.getSeccionId())) {
-                throw new RuntimeException("Uno o más alumnos ya pertenecen a un grupo");
+                throw new GrupoServiceException("Uno o más alumnos ya pertenecen a un grupo");
             }
         }
 
@@ -148,11 +150,11 @@ public class GrupoService {
                 .stream()
                 .filter(as -> as.getGrupo() != null &&
                         as.getGrupo().getIdGrupo().equals(grupo.getIdGrupo()))
-                .collect(Collectors.toList());
+                .toList();
 
         List<AlumnoDTO> alumnosDTO = alumnosSecciones.stream()
                 .map(this::convertToAlumnoDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         CrearGrupoResponse r = new CrearGrupoResponse();
         r.setIdGrupo(grupo.getIdGrupo());
@@ -163,4 +165,22 @@ public class GrupoService {
         r.setCantidadAlumnos(alumnosDTO.size());
         return r;
     }
+
+    public List<ObtenerCompanerosResponse> obtenerCompaneros(Integer idSeccion, Integer idPersona) {
+        List<Object[]> resultados = grupoRepository.obtenerCompaneros(idSeccion, idPersona);
+
+        List<ObtenerCompanerosResponse> companeros = new ArrayList<>();
+
+        for (Object[] fila : resultados) {
+            ObtenerCompanerosResponse dto = new ObtenerCompanerosResponse();
+            dto.setNombres((String) fila[0]);
+            dto.setApellido_p((String) fila[1]);
+            dto.setApellido_m((String) fila[2]);
+            dto.setPromedio_final(fila[3] != null ? ((Number) fila[3]).intValue() : null);
+            companeros.add(dto);
+        }
+
+        return companeros;
+    }
+
 }
